tests/machine/x/java/right_join.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsright_join1883936982/001/Main.java:42: error: incompatible types: Object cannot be converted to DataClass2
			_res3.add(new DataClass3(c.name, o));
			                                 ^
/tmp/TestCompileValidProgramsright_join1883936982/001/Main.java:50: error: incompatible types: DataClass2 cannot be converted to boolean
		if (entry.order) {
		         ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors


  1| // right_join.mochi
  2| // Right join: keep all customers, include orders if any